--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,8 @@
   color: bisque;
   width: 100px;
   letter-spacing: 1.5px;
+  padding-left: 4px;
+  padding-right: 4px;
   box-shadow: 0px 1px 2px 0px rgb(0, 0, 0, 0.5);
   transition: background-color 0.5s;
 }
@@ -21,6 +23,15 @@
 .navbar-button:focus {
   color: bisque;
   background-color: rgb(153, 114, 24, 0.4);
+}
+
+.navbar-button.active {
+  background-color: rgba(143, 125, 82, 0.9) !important;
+}
+.list-group-item.active {
+  color: rgb(68, 68, 68) !important;
+  background-color: rgba(232, 232, 232, 0.9) !important;
+  border-color: rgba(132, 132, 132, 0.9) !important;
 }
 
 .form-button {
